ruka-lang.org/src/lib/interpreter/fixtures/type-err/cast-invalid.ruka
// expect: cannot cast
let main = () do
	let r = record { x: int } { x = 1 }
	let s = r as string
end
